--- a/master/website/templates/home.html
+++ b/master/website/templates/home.html
@@ -57,12 +57,12 @@ home
             <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2><strong>환율</strong></h2>
+                        <h2><strong>Explanation</strong></h2>
                     </div>
-                    <div class="info-box dark-bg" onclick="location.href='#';" data-target="#myModal" data-toggle="modal">
+                    <div class="info-box dark-bg">
                         <i class="fa fa-money"></i>
-                        <div class="count">₩{{price}}</div>
-                        <div class="title">미국USD</div>
+                        <div class="count">Explanation</div>
+                        <div class="title">의사결정지원</div>
                     </div>
                 </div>
                 <!--/.info-box-->
@@ -118,20 +118,6 @@ home
                 {% endif %}
 
             </div>
-            <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                            <h4 class="modal-title">Form Tittle</h4>
-                        </div>
-                        <div class="modal-body" align="center">
-                            <img src="{{graph}}" width="500px">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
         <div class="row">
             <div class="col-lg-12">
